istio-bootcamp/manifests/bootcamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootcamp-v1
spec:
  selector:
    matchLabels:
      app: bootcamp
  replicas: 2
  template:
    metadata:
      labels:
        app: bootcamp
        version: v1
    spec:
      containers:
      - name: bootcamp
        image: docker.io/jocatalin/kubernetes-bootcamp:v1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootcamp-v2
spec:
  selector:
    matchLabels:
      app: bootcamp
  replicas: 1
  template:
    metadata:
      labels:
        app: bootcamp
        version: v2
    spec:
      containers:
      - name: bootcamp
        image: docker.io/jocatalin/kubernetes-bootcamp:v2
        ports:
        - containerPort: 8080
