istio-bootcamp/manifests/bootcamp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootcamp
  labels:
    app: bootcamp
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
  selector:
    app: bootcamp
