istio-bootcamp/manifests/bootcamp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bootcamp
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /bootcamp
        backend:
          serviceName: bootcamp
          servicePort: 8080
